--- a/trunk/UI/gui/viewer/sdl/Makefile.am
+++ b/trunk/UI/gui/viewer/sdl/Makefile.am
@@ -1,8 +1,8 @@
 bin_PROGRAMS = btgvs
 
-btgvs_SOURCES = handler.cpp ui.cpp btgvs.cpp
+btgvs_SOURCES = arg.cpp handler.cpp ui.cpp btgvs.cpp
 
-noinst_HEADERS = handler.h ui.h btgvs.h
+noinst_HEADERS = arg.h handler.h ui.h btgvs.h
 
 btgvs_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                 $(top_builddir)/bcore/client/libbtgclient.la \
