Update gui makefile so that viewer can be built when gui is disabled.

--- a/trunk/UI/gui/Makefile.am
+++ b/trunk/UI/gui/Makefile.am
@@ -2,6 +2,8 @@ if BUILDVIEWER
   SUBDIRS = viewer
 endif
 
+if BUILDGUI
+
 bin_PROGRAMS = btgui
 
 btgui_SOURCES = initwindow.cpp \
@@ -36,3 +38,5 @@ btgui_CFLAGS   = @CFLAGS@ @LIBGNUTLS_CFLAGS@ \
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/external
 man1_MANS  = btgui.man
 EXTRA_DIST = btgui.man
+
+endif # build gui
