--- a/trunk/UI/Makefile.am
+++ b/trunk/UI/Makefile.am
@@ -1,12 +1,8 @@
-if BUILDGUI
-  GUI_SUBDIR = gui
-endif
-
 if BUILDCLI
   CLI_SUBDIR = cli
 endif
 
-SUBDIRS = $(CLI_SUBDIR) $(GUI_SUBDIR) www
+SUBDIRS = $(CLI_SUBDIR) gui www
 
 
 
