FR-003776 lastFiles are working via clientdynConfig now

--- a/trunk/bcore/Makefile.am
+++ b/trunk/bcore/Makefile.am
@@ -80,7 +80,8 @@ logger/syslog_log.cpp
 
 EXTERNALIZATION_SOURCES=externalization/externalization.cpp \
 externalization/simple.cpp \
-externalization/xmlrpc.cpp
+externalization/xmlrpc.cpp \
+externalization/externalization_factory.cpp
 
 AUTH_SOURCES=auth/hash.cpp
 
@@ -185,7 +186,8 @@ EXTERNALIZATION_HEADER=externalization/ext_macro.h \
 externalization/externalization.h \
 externalization/simple.h \
 externalization/xmlrpc.h \
-externalization/t_simple.h
+externalization/t_simple.h \
+externalization/externalization_factory.h
 
 AUTH_HEADER=auth/hash.h
 
