--- a/trunk/bcore/client/Makefile.am
+++ b/trunk/bcore/client/Makefile.am
@@ -7,7 +7,8 @@ clienthandler.cpp \
 clientcallback.cpp \
 helper_argif.cpp \
 helper.cpp \
-handlerthr.cpp
+handlerthr.cpp \
+clientdynconfig.cpp
 
 noinst_HEADERS = carg.h \
 configuration.h lastfiles.h \
@@ -16,7 +17,8 @@ clienthandler.h \
 clientcallback.h \
 helper_argif.h \
 helper.h \
-handlerthr.h
+handlerthr.h \
+clientdynconfig.h
 
 libbtgclient_la_CFLAGS   = @DEBUG_CFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@
 libbtgclient_la_CXXFLAGS = @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@
