--- a/trunk/UI/gui/Makefile.am
+++ b/trunk/UI/gui/Makefile.am
@@ -8,7 +8,7 @@ bin_PROGRAMS = btgui
 
 btgui_SOURCES = initwindow.cpp \
 errordialog.cpp questiondialog.cpp prefdialog.cpp aboutdialog.cpp limitdialog.cpp sessiondialog.cpp \
-sessionselection.cpp authdialog.cpp \
+sessionselection.cpp authdialog.cpp sndialog.cpp \
 gtkmm_log.cpp guihandler.cpp traficmodel.cpp traficplot.cpp logtextview.cpp mainfiletreeview.cpp selectfiletreeview.cpp mainnotebook.cpp mainmodel.cpp filemodel.cpp fipixbox.cpp mainstatusbar.cpp mainmenubar.cpp maintreeview.cpp \
 peermodel.cpp peertreeview.cpp \
 detailsmodel.cpp detailstreeview.cpp \
@@ -16,7 +16,7 @@ mainwindow.cpp btgui.cpp
 
 noinst_HEADERS = initwindow.h \
 errordialog.h questiondialog.h prefdialog.h aboutdialog.h limitdialog.h sessiondialog.h \
-sessionselection.h authdialog.h \
+sessionselection.h authdialog.h sndialog.h \
 gtkmm_log.h guihandler.h traficmodel.h filemodel.h fipixbox.h traficplot.h logtextview.h mainfiletreeview.h selectfiletreeview.h mainnotebook.h mainmodel.h mainmenubar.h mainstatusbar.h maintreeview.h \
 peermodel.h peertreeview.h \
 detailsmodel.h detailstreeview.h \
