--- a/trunk/daemon/upnp/Makefile.am
+++ b/trunk/daemon/upnp/Makefile.am
@@ -14,3 +14,4 @@ libupnp_la_CFLAGS   = @CFLAGS@   @DEBUG_CFLAGS@   -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_
 libupnp_la_CXXFLAGS = @CXXFLAGS@ @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
 -DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ -DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ -DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CPPFLAGS@
 
+INCLUDES = -I$(top_srcdir)
