--- a/trunk/script/Makefile.am
+++ b/trunk/script/Makefile.am
@@ -1,5 +1,5 @@
-bin_SCRIPTS = btgd btgq btg-config
+bin_SCRIPTS = btg-config
 
-man1_MANS  = btgd.man btgq.man btg-config.man
-EXTRA_DIST = btgd.man btgq.man btg-config.man
+man1_MANS  = btg-config.man
+EXTRA_DIST = btg-config.man
 
