Fix of bug 12762.

--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -67,6 +67,14 @@ BTG_BUILD=$VERSION
 AC_SUBST(BTG_BUILD)
 rm -f datestamp
 
+AC_PATH_PROGS(SVNVERSION, svnversion, [])
+if test -n "$SVNVERSION" ; then
+  BTG_SVNREV="SVN rev. `${SVNVERSION} . -n`"
+else
+  BTG_SVNREV=""
+fi   
+AC_SUBST(BTG_SVNREV)
+
 AC_CACHE_SAVE
 
 dnl Pthread support:
