Fix of bug 12952.

--- a/trunk/script/Makefile.am
+++ b/trunk/script/Makefile.am
@@ -1,5 +1,6 @@
-bin_SCRIPTS = btg-config
+if GENBTGCONFIG
+  bin_SCRIPTS = btg-config
 
-man1_MANS  = btg-config.man
-EXTRA_DIST = btg-config.man
-
+  man1_MANS  = btg-config.man
+  EXTRA_DIST = btg-config.man
+endif
