--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -168,13 +168,24 @@ PKG_CHECK_MODULES(LIBTORRENT, libtorrent >= 0.13)
 AC_SUBST(LIBTORRENT_CFLAGS)
 AC_SUBST(LIBTORRENT_LIBS)
 
+AC_ARG_ENABLE(btg-config,
+[  --enable-btg-config     generate btg-config script.],
+[case "${enableval}" in
+yes) gen_btg_config=true ;;
+no)  gen_btg_config=false ;;
+*) AC_MSG_ERROR(bad value ${enableval} for --enable-btg-config) ;;
+esac],[gen_btg_config=false])
+AM_CONDITIONAL(GENBTGCONFIG, test x$gen_btg_config = xtrue)
+
 dnl Check that dialog exists.
 
-AC_PATH_PROG(DIALOG, dialog, "no")
-
-if test "${DIALOG}" = "no" ;
-then
-  AC_MSG_ERROR([Dialog binary not found, currently this is required for the btg-config script.]);
+if test "$gen_btg_config" == "true"; then
+   AC_PATH_PROG(DIALOG, dialog, "no")
+   
+   if test "${DIALOG}" = "no" ;
+   then
+     AC_MSG_ERROR([Dialog binary not found, currently this is required for the btg-config script.]);
+   fi
 fi
 
 AC_CACHE_SAVE
@@ -453,9 +464,20 @@ fi
 
 BTG_LINK_CHECK
 
-AC_OUTPUT(Makefile external/Makefile external/xmlrpc-epi/Makefile external/xmlrpc-epi/src/Makefile external/xmlrpc-epi/expat/Makefile external/xmlrpc-epi/expat/xmlparse/Makefile external/xmlrpc-epi/expat/xmltok/Makefile external/ini/Makefile external/plotmm/Makefile bcore/Makefile bcore/client/Makefile daemon/Makefile daemon/upnp/Makefile daemon/ipfilter/Makefile daemon/auth/Makefile daemon/resource/Makefile utest/Makefile stest/Makefile doc/Makefile doc/commands/Makefile doc/site/Makefile UI/Makefile UI/cli/Makefile UI/cli/ncurses/Makefile UI/gui/Makefile UI/gui/viewer/Makefile UI/gui/viewer/sdl/Makefile UI/www/Makefile UI/www/php/Makefile UI/www/php/htdocs/bcore/command/Makefile UI/www/php/htdocs/bcore/Makefile UI/www/php/htdocs/images/Makefile UI/www/php/htdocs/Makefile UI/www/php/htdocs/version.php script/Makefile script/btg-config)
+AC_OUTPUT(Makefile external/Makefile external/xmlrpc-epi/Makefile external/xmlrpc-epi/src/Makefile external/xmlrpc-epi/expat/Makefile external/xmlrpc-epi/expat/xmlparse/Makefile external/xmlrpc-epi/expat/xmltok/Makefile external/ini/Makefile external/plotmm/Makefile bcore/Makefile bcore/client/Makefile daemon/Makefile daemon/upnp/Makefile daemon/ipfilter/Makefile daemon/auth/Makefile daemon/resource/Makefile utest/Makefile stest/Makefile doc/Makefile doc/commands/Makefile doc/site/Makefile UI/Makefile UI/cli/Makefile UI/cli/ncurses/Makefile UI/gui/Makefile UI/gui/viewer/Makefile UI/gui/viewer/sdl/Makefile UI/www/Makefile UI/www/php/Makefile UI/www/php/htdocs/bcore/command/Makefile UI/www/php/htdocs/bcore/Makefile UI/www/php/htdocs/images/Makefile UI/www/php/htdocs/Makefile UI/www/php/htdocs/version.php script/Makefile)
+
+if test "$gen_btg_config" == "true"; then
+   AC_OUTPUT(script/btg-config)
+fi
+
 
 AC_MSG_NOTICE([Status:])
+
+if test "$gen_btg_config" == "true"; then
+        AC_MSG_NOTICE([btg-config    : enabled])
+else
+        AC_MSG_NOTICE([btg-config    : disabled])
+fi
 
 if test "$enabledebug" == "true"; then
         AC_MSG_NOTICE([debug         : enabled])
