Set svn version on all files that matter.

--- a/trunk/UI/cli/Makefile.am
+++ b/trunk/UI/cli/Makefile.am
@@ -10,9 +10,11 @@ btgcli_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
 
 btgcli_LDFLAGS = @LIBS@ @CURSES_LIB@ -l@BOOST_DATE_TIME_LIB@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ -l@BOOST_PROGRAM_OPTIONS_LIB@ -l@BOOST_THREAD_LIB@
 btgcli_CFLAGS   = @CFLAGS@ @LIBGNUTLS_CFLAGS@ \
-                  -DBTG_DEBUG=@BTG_DEBUG@
+-DBTG_DEBUG=@BTG_DEBUG@ \
+-DBTG_SVNREV="@BTG_SVNREV@"
 btgcli_CXXFLAGS = @CXXFLAGS@ @LIBGNUTLS_CFLAGS@ \
-                  -DBTG_DEBUG=@BTG_DEBUG@
+-DBTG_DEBUG=@BTG_DEBUG@ \
+-DBTG_SVNREV="@BTG_SVNREV@"
 
 INCLUDES = -I$(top_srcdir)
 
