--- a/trunk/UI/cli/ncurses/Makefile.am
+++ b/trunk/UI/cli/ncurses/Makefile.am
@@ -34,9 +34,12 @@ btgncli_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
 btgncli_LDFLAGS = @LIBS@ @CURSES_LIB@ -l@BOOST_DATE_TIME_LIB@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ -l@BOOST_PROGRAM_OPTIONS_LIB@ -l@BOOST_THREAD_LIB@ 
 
 btgncli_CFLAGS   = @CFLAGS@ @LIBGNUTLS_CFLAGS@ \
-                  -DBTG_DEBUG=@BTG_DEBUG@
+-DBTG_DEBUG=@BTG_DEBUG@ \
+-DBTG_SVNREV="@BTG_SVNREV@"
+
 btgncli_CXXFLAGS = @CXXFLAGS@ @LIBGNUTLS_CFLAGS@ \
-                  -DBTG_DEBUG=@BTG_DEBUG@
+-DBTG_DEBUG=@BTG_DEBUG@ \
+-DBTG_SVNREV="@BTG_SVNREV@"
 
 INCLUDES = -I$(top_srcdir)
 
