--- a/trunk/UI/gui/Makefile.am
+++ b/trunk/UI/gui/Makefile.am
@@ -30,10 +30,12 @@ btgui_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
 
 btgui_LDFLAGS  = @LIBS@ @PCM_GTKMM_LIBS@ -l@BOOST_DATE_TIME_LIB@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ -l@BOOST_PROGRAM_OPTIONS_LIB@ -l@BOOST_THREAD_LIB@
 btgui_CXXFLAGS = @CXXFLAGS@ @PCM_GTKMM_CFLAGS@ @LIBGNUTLS_CFLAGS@ \
-                 -DBTG_DEBUG=@BTG_DEBUG@ 
+-DBTG_DEBUG=@BTG_DEBUG@ \
+-DBTG_SVNREV="@BTG_SVNREV@"
 
 btgui_CFLAGS   = @CFLAGS@ @LIBGNUTLS_CFLAGS@ \
-                 -DBTG_DEBUG=@BTG_DEBUG@ 
+-DBTG_DEBUG=@BTG_DEBUG@ \
+-DBTG_SVNREV="@BTG_SVNREV@"
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/external
 man1_MANS  = btgui.man
