--- a/trunk/doc/commands/Makefile.am
+++ b/trunk/doc/commands/Makefile.am
@@ -13,8 +13,13 @@ gen_cmd_docs_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
 
 gen_cmd_docs_LDFLAGS = @LIBS@ @LIBTORRENT_LIBS@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST_PROGRAM_OPTIONS_LIB@ @LIBGNUTLS_LIBS@ 
 
-gen_cmd_docs_CFLAGS   = @CFLAGS@   -DBTG_DEBUG=@BTG_DEBUG@
-gen_cmd_docs_CXXFLAGS = @CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@
+gen_cmd_docs_CFLAGS   = @CFLAGS@ \
+-DBTG_DEBUG=@BTG_DEBUG@ \
+-DBTG_SVNREV="@BTG_SVNREV@"
+
+gen_cmd_docs_CXXFLAGS = @CXXFLAGS@ \
+-DBTG_DEBUG=@BTG_DEBUG@ \
+-DBTG_SVNREV="@BTG_SVNREV@"
 
 INCLUDES = -I$(top_srcdir)
 
