--- a/trunk/UI/gui/viewer/sdl/Makefile.am
+++ b/trunk/UI/gui/viewer/sdl/Makefile.am
@@ -10,9 +10,13 @@ btgvs_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
 
 btgvs_LDFLAGS  = @LIBS@ -l@BOOST_DATE_TIME_LIB@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ -l@BOOST_PROGRAM_OPTIONS_LIB@ -l@BOOST_THREAD_LIB@ @AGAR_LIBS@
 
-btgvs_CXXFLAGS = @CXXFLAGS@ @LIBGNUTLS_CFLAGS@ @AGAR_CFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@
+btgvs_CXXFLAGS = @CXXFLAGS@ @LIBGNUTLS_CFLAGS@ @AGAR_CFLAGS@ \
+-DBTG_DEBUG=@BTG_DEBUG@ \
+-DBTG_SVNREV="@BTG_SVNREV@"
 
-btgvs_CFLAGS   = @CFLAGS@ @LIBGNUTLS_CFLAGS@ @AGAR_CFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@
+btgvs_CFLAGS   = @CFLAGS@ @LIBGNUTLS_CFLAGS@ @AGAR_CFLAGS@ \
+-DBTG_DEBUG=@BTG_DEBUG@ \
+-DBTG_SVNREV="@BTG_SVNREV@"
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/external
 man1_MANS  = btgvs.man
