--- a/trunk/daemon/upnp/Makefile.am
+++ b/trunk/daemon/upnp/Makefile.am
@@ -9,9 +9,18 @@ noinst_HEADERS = upnpif.h portmap.h $(CYBERLINK_HEADER)
 
 libupnp_la_SOURCES = upnpif.cpp portmap.cpp $(CYBERLINK_SOURCE)
 
-libupnp_la_CFLAGS   = @CFLAGS@   @DEBUG_CFLAGS@   -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
--DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ -DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ -DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@
-libupnp_la_CXXFLAGS = @CXXFLAGS@ @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
--DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ -DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ -DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CPPFLAGS@
+libupnp_la_CFLAGS   = @CFLAGS@ @DEBUG_CFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
+-DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
+-DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
+-DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
+-DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ \
+-DBTG_SVNREV="@BTG_SVNREV@"
+
+libupnp_la_CXXFLAGS = @CXXFLAGS@ @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
+-DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
+-DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
+-DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
+-DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CPPFLAGS@ \
+-DBTG_SVNREV="@BTG_SVNREV@"
 
 INCLUDES = -I$(top_srcdir)
