removed using namespace std from .. everywhere. Added sending session information, if requested by a client.

--- a/trunk/bcore/Makefile.am
+++ b/trunk/bcore/Makefile.am
@@ -70,6 +70,7 @@ command/session_quit.cpp \
 command/session_error.cpp \
 command/session_name.cpp \
 command/session_rw.cpp \
+command/session_info.cpp \
 command/setup.cpp \
 command/kill.cpp \
 command/limit.cpp \
@@ -177,6 +178,7 @@ command/session_quit.h \
 command/session_error.h \
 command/session_name.h \
 command/session_rw.h \
+command/session_info.h \
 command/setup.h \
 command/kill.h \
 command/limit.h \
