Partial fix of bug 12970.

--- a/trunk/bcore/Makefile.am
+++ b/trunk/bcore/Makefile.am
@@ -55,6 +55,7 @@ command/context_peers.cpp \
 command/context_peers_rsp.cpp \
 command/context_file.cpp \
 command/context_tracker.cpp \
+command/context_move.cpp \
 command/error.cpp \
 command/list.cpp \
 command/list_rsp.cpp \
@@ -163,6 +164,7 @@ command/context_peers.h \
 command/context_peers_rsp.h \
 command/context_file.h \
 command/context_tracker.h \
+command/context_move.h \
 command/error.h \
 command/list.h \
 command/list_rsp.h \
