some addition to [ Feature Request #4017 ] SVN revision in version string

--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -69,7 +69,8 @@ rm -f datestamp
 
 AC_PATH_PROGS(SVNVERSION, svnversion, [])
 if test -n "$SVNVERSION" ; then
-  BTG_SVNREV="SVN rev. `${SVNVERSION} . -n`"
+  local_SRC_DIR=`dirname $0`
+  BTG_SVNREV="SVN rev. `${SVNVERSION} -n $local_SRC_DIR`"
 else
   BTG_SVNREV=""
 fi   
