Make static linking work.

--- a/trunk/UI/cli/ncurses/Makefile.am
+++ b/trunk/UI/cli/ncurses/Makefile.am
@@ -33,7 +33,8 @@ noinst_HEADERS = nconfig.h \
 
 btgncli_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                   $(top_builddir)/bcore/client/libbtgclient.la \
-                  $(top_builddir)/external/ini/libini.la
+                  $(top_builddir)/external/ini/libini.la \
+                  $(top_builddir)/bcore/libbtgcore.la
 
 btgncli_LDFLAGS = @LIBS@ @CURSES_LIB@ -l@BOOST_DATE_TIME_LIB@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ -l@BOOST_PROGRAM_OPTIONS_LIB@ -l@BOOST_THREAD_LIB@ 
 
