--- a/trunk/UI/gui/Makefile.am
+++ b/trunk/UI/gui/Makefile.am
@@ -27,7 +27,8 @@ gtkmm_ver.h usermessage.h
 btgui_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                 $(top_builddir)/bcore/client/libbtgclient.la \
                 $(top_builddir)/external/ini/libini.la \
-                $(top_builddir)/external/plotmm/libplotmm.la
+                $(top_builddir)/external/plotmm/libplotmm.la \
+                $(top_builddir)/bcore/libbtgcore.la
 
 btgui_LDFLAGS  = @LIBS@ @PCM_GTKMM_LIBS@ -l@BOOST_DATE_TIME_LIB@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ -l@BOOST_PROGRAM_OPTIONS_LIB@ -l@BOOST_THREAD_LIB@
 btgui_CXXFLAGS = @CXXFLAGS@ @PCM_GTKMM_CFLAGS@ @LIBGNUTLS_CFLAGS@ \
