--- a/trunk/UI/gui/viewer/sdl/Makefile.am
+++ b/trunk/UI/gui/viewer/sdl/Makefile.am
@@ -6,7 +6,8 @@ noinst_HEADERS = agar-if.h arg.h handler.h ui.h btgvs.h
 
 btgvs_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                 $(top_builddir)/bcore/client/libbtgclient.la \
-                $(top_builddir)/external/ini/libini.la
+                $(top_builddir)/external/ini/libini.la \
+                $(top_builddir)/bcore/libbtgcore.la
 
 btgvs_LDFLAGS  = @LIBS@ -l@BOOST_DATE_TIME_LIB@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ -l@BOOST_PROGRAM_OPTIONS_LIB@ -l@BOOST_THREAD_LIB@ @AGAR_LIBS@
 
