Fix of bug 13359.

--- a/trunk/UI/cli/ncurses/Makefile.am
+++ b/trunk/UI/cli/ncurses/Makefile.am
@@ -26,7 +26,7 @@ noinst_HEADERS = nconfig.h \
                  fileview.h \
                  sessionselect.h \
                  fileselect.h \
-                 numinput.cpp \
+                 numinput.h \
                  mainwindow.h \
                  ui.h \
                  handler.h
