--- a/trunk/doc/site/Makefile.am
+++ b/trunk/doc/site/Makefile.am
@@ -10,7 +10,8 @@ man-pages:
 RST_FILES=index.rst \
 packages.rst \
 howto.rst howto_bfs.rst howto_devel.rst \
-howto-0.3.rst howto-0.4.rst howto-0.5.rst howto-0.6.rst howto-0.7.rst howto-0.9.6.rst
+howto-0.3.rst howto-0.4.rst howto-0.5.rst howto-0.6.rst howto-0.7.rst \
+howto-0.9.6.rst howto-0.9.7.rst
 
 html: man-pages $(RST_FILES)
 	$(RST2HTML) index.rst > index.html
@@ -27,6 +28,7 @@ html: man-pages $(RST_FILES)
 	$(RST2HTML) howto-0.6.rst > howto-0.6.html
 	$(RST2HTML) howto-0.7.rst > howto-0.7.html
 	$(RST2HTML) howto-0.9.6.rst > howto-0.9.6.html
+	$(RST2HTML) howto-0.9.7.rst > howto-0.9.7.html
 
 # Target used to generate a pdf version of the howto.
 # Assumes that rst2latex and latex is installed.
