BTG_SVNREV -> BTG_REV makefiles fix

--- a/trunk/UI/gui/viewer/sdl/Makefile.am
+++ b/trunk/UI/gui/viewer/sdl/Makefile.am
@@ -13,11 +13,11 @@ btgvs_LDFLAGS  = @LIBS@ -l@BOOST_DATE_TIME_LIB@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST
 
 btgvs_CXXFLAGS = @CXXFLAGS@ @LIBGNUTLS_CFLAGS@ @AGAR_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
--DBTG_SVNREV="@BTG_SVNREV@"
+-DBTG_REV="@BTG_REV@"
 
 btgvs_CFLAGS   = @CFLAGS@ @LIBGNUTLS_CFLAGS@ @AGAR_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
--DBTG_SVNREV="@BTG_SVNREV@"
+-DBTG_REV="@BTG_REV@"
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/external
 man1_MANS  = btgvs.man
