--- a/trunk/doc/commands/Makefile.am
+++ b/trunk/doc/commands/Makefile.am
@@ -15,11 +15,11 @@ gen_cmd_docs_LDFLAGS = @LIBS@ @LIBTORRENT_LIBS@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST
 
 gen_cmd_docs_CFLAGS   = @CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
--DBTG_SVNREV="@BTG_SVNREV@"
+-DBTG_REV="@BTG_REV@"
 
 gen_cmd_docs_CXXFLAGS = @CXXFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
--DBTG_SVNREV="@BTG_SVNREV@"
+-DBTG_REV="@BTG_REV@"
 
 INCLUDES = -I$(top_srcdir)
 
